--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
     ],
     "require": {
         "php" : ">=5.5.0",
-        "laravel/framework": "5.2.*|5.3.*|5.4.*|5.5.*|5.6.*"
+        "laravel/framework": "5.2.*|5.3.*|5.4.*|5.5.*|5.6.*|5.7.*"
     },
     "autoload": {
 		"psr-4": {
